Small CSS fixes (ensure tweets aren't too long and work year is on same baseline as the work name) Remove dialogs for now. I'll re-add them with smaller code later. Work page shuffling - scroll to top faster - stops shuddering if we immediately try and scroll down index.html now content.html, as it's used for all content pages Fix small bug with tag mouseover (forgot to add event)

--- a/public/less/portfolio.less
+++ b/public/less/portfolio.less
@@ -75,6 +75,7 @@ p#last_tweet {
 	border-top: 1px solid @darkgrey;
 	border-bottom: 1px solid @darkgrey;
 	padding: 10px;
+	max-width: 420px;
 }
 
 /* Nav */
@@ -176,6 +177,7 @@ li.work {
 
 .year {
 	float: right;
+	padding-top: 3px;
 }
 
 p.description {
